[workspace.package]
version = "0.9.1"
authors = ["Gear Technologies"]
edition = "2024"
license = "GPL-3.0"
repository = "https://github.com/gear-tech/sails"
rust-version = "1.88"

[workspace]
resolver = "3"
members = [
    "examples/demo/app",
    "examples/demo/client",
    "examples/demo/walker",
    "examples/no-svcs-prog/app",
    "examples/no-svcs-prog/wasm",
    "examples/proxy/",
    "examples/rmrk/catalog/app",
    "examples/rmrk/catalog/wasm",
    "examples/rmrk/resource/app",
    "examples/rmrk/resource/wasm",
    "examples/redirect",
    "examples/redirect/app",
    "examples/redirect/client",
    "examples/redirect/proxy",
    "examples/redirect/proxy-client",
    "examples/event-routes",
    "examples/event-routes/app",
    "rs",
    "rs/cli",
    "rs/client-gen",
    "rs/idl-gen",
    "rs/idl-meta",
    "rs/idl-parser",
    "rs/macros",
    "rs/macros/core",
    "rs/sol-gen",
    "benchmarks/alloc-stress",
    "benchmarks/compute-stress",
    "benchmarks/counter-bench",
    "benchmarks/ping-pong/app",
    "benchmarks/ping-pong/client",
    "benchmarks",
]

[workspace.dependencies]
# The order matches with publishing order.
sails-idl-meta = { path = "rs/idl-meta" }
sails-idl-parser = { path = "rs/idl-parser" }
sails-idl-gen = { path = "rs/idl-gen" }
sails-client-gen = { path = "rs/client-gen" }
sails-macros-core = { path = "rs/macros/core" }
sails-macros = { path = "rs/macros" }
sails-rs = { path = "rs" }
sails-sol-gen = { path = "rs/sol-gen" }
# Renamed sails-rs for `proxy` demo
sails-rename = { package = "sails-rs", path = "rs" }

# Gear deps
gclient = "=1.9.1"
gcore = "=1.9.1"
gear-core = { version = "=1.9.1", default-features = false }
gear-core-errors = "=1.9.1"
gprimitives = { version = "=1.9.1", default-features = false, features = ["codec"] }
gstd = "=1.9.1"
gtest = "=1.9.1"
gwasm-builder = { version = "=1.9.1", package = "gear-wasm-builder" }

# Other deps in alphabetical order
alloy-primitives = { version = "0.8.19", default-features = false }
alloy-sol-types = { version = "0.8.19", default-features = false }
anyhow = "1"
askama = "0.14"
cargo-generate = "0.23"
cargo_metadata = "0.19"
clap = "4.5"
fs2 = "0.4.3"
convert_case = "0.7"
futures = { version = "0.3", default-features = false }
genco = "0.17"
git-download = "0.1"
handlebars = "4.4"
hashbrown = "0.15"
hex = { version = "0.4", default-features = false }
insta = "1.43"
itertools = "0.14"
keccak-const = "0.2"
lalrpop = { version = "0.20", default-features = false }
lalrpop-util = "0.20"
log = { version = "0.4", default-features = false }
logos = "0.13"
mockall = "0.12"
pin-project-lite = "0.2"
parity-scale-codec = { version = "=3.7.5", default-features = false }
paste = "1.0"
prettyplease = "0.2"
proc-macro-error = "1.0"
proc-macro2 = { version = "1", default-features = false }
rustdoc-types = "=0.36.0"
quote = "1.0"
scale-info = { version = "2.11", default-features = false }
serde = "1.0"
serde-json = { package = "serde_json", version = "1.0" }
spin = { version = "0.9", default-features = false, features = ["spin_mutex"] }
syn = "2.0"
thiserror = { version = "2.0", default-features = false }
toml_edit = "0.22"
tempfile = "3.19"
tokio = "1.45"
tokio-stream = "0.1"
trybuild = "1"
