[workspace.package]
version = "2.0.0"
authors = ["Gear Technologies"]
edition = "2024"
license = "GPL-3.0"
repository = "https://github.com/gear-tech/sails"
rust-version = "1.93"

[workspace]
resolver = "3"
members = [
    "examples/demo/app",
    "examples/demo/client",
    "examples/demo/walker",
    "examples/no-svcs-prog/app",
    "examples/no-svcs-prog/wasm",
    "examples/proxy/",
    "examples/rmrk/catalog/app",
    "examples/rmrk/catalog/wasm",
    "examples/rmrk/resource/app",
    "examples/rmrk/resource/wasm",
    "examples/redirect",
    "examples/redirect/app",
    "examples/redirect/client",
    "examples/redirect/proxy",
    "examples/redirect/proxy-client",
    "examples/event-routes",
    "examples/event-routes/app",
    "examples/ping-pong-stack",
    "examples/aggregator/app",
    "examples/aggregator/client",
    "examples/partial-idl/app",
    "examples/partial-idl/client",
    "examples/inspector/app",
    "examples/inspector/client",
    "rs",
    "rs/cargo",
    "rs/client-gen-v2",
    "rs/client-gen-js",
    "rs/client-gen",
    "rs/idl-ast",
    "rs/idl-embed",
    "rs/idl-gen",
    "rs/idl-meta",
    "rs/idl-parser",
    "rs/idl-parser-v2",
    "rs/idl-parser-wasm",
    "rs/macros",
    "rs/macros/core",
    "rs/reflect-hash",
    "rs/sol-gen",
    "rs/type-registry",
    "rs/type-registry/derive",
    "benchmarks/alloc-stress",
    "benchmarks/compute-stress",
    "benchmarks/counter-bench",
    "benchmarks/ping-pong/app",
    "benchmarks/ping-pong/client",
    "benchmarks/noop-baseline",
    "benchmarks",
]

[workspace.dependencies]
# The order matches with publishing order.
sails-idl-ast = { path = "rs/idl-ast" }
sails-idl-meta = { path = "rs/idl-meta" }
sails-idl-parser = { path = "rs/idl-parser" }
sails-idl-parser-v2 = { path = "rs/idl-parser-v2", default-features = false }
sails-idl-embed = { path = "rs/idl-embed" }
sails-idl-gen = { path = "rs/idl-gen" }
sails-client-gen = { path = "rs/client-gen" }
sails-client-gen-v2 = { path = "rs/client-gen-v2" }
sails-client-gen-js = { path = "rs/client-gen-js" }
sails-macros-core = { path = "rs/macros/core" }
sails-macros = { path = "rs/macros" }
sails-reflect-hash-derive = { path = "rs/reflect-hash/derive" }
sails-reflect-hash = { path = "rs/reflect-hash" }
sails = { path = "rs" }
sails-sol-gen = { path = "rs/sol-gen", default-features = false }
sails-type-registry = { path = "rs/type-registry" }
sails-type-registry-derive = { path = "rs/type-registry/derive" }
# Renamed sails for `proxy` demo
sails-rename = { package = "sails", path = "rs" }

# Gear deps
gsdk = "=2.0.0"
gcore = "=2.0.0"
gear-core = { version = "=2.0.0", default-features = false }
gear-core-errors = "=2.0.0"
gprimitives = { version = "=2.0.0", default-features = false, features = ["codec"] }
gstd = { version = "=2.0.0", default-features = false }
gsys = "=2.0.0"
gtest = "=2.0.0"
gear-node-wrapper = "=2.0.0"
gwasm-builder = { version = "=2.0.0", package = "gear-wasm-builder" }

# Other deps in alphabetical order
alloy-primitives = { version = "1.6", default-features = false }
alloy-sol-types = { version = "1.6", default-features = false }
anyhow = "1"
askama = { version = "0.16", default-features = false }
cargo_metadata = "0.23"
chrono = "0.4"
clap = "4.6"
convert_case = "0.11"
fs2 = "0.4.3"
futures = { version = "0.3", default-features = false }
genco = "0.19"
git-download = "0.1"
hashbrown = "0.17"
hex = { version = "0.4", default-features = false }
insta = "1.47"
itertools = { version = "0.14", default-features = false }
keccak-const = "0.2"
lalrpop = { version = "=0.20", default-features = false } # PIN version
lalrpop-util = { version = "=0.20", default-features = false } # PIN version
log = { version = "0.4", default-features = false }
logos = { version = "0.16", default-features = false, features = ["export_derive"] }
mockall = "0.14"
parity-scale-codec = { version = "=3.7.5", default-features = false }
paste = "1.0"
pest = { version = "2", default-features = false }
pest_derive = { version = "2", default-features = false }
pin-project-lite = "0.2"
prettyplease = "0.2"
proc-macro2 = { version = "1", default-features = false }
proc-macro-crate = "3.5.0"
proc-macro-error = "1.0"
quote = "1.0"
rustdoc-types = "=0.57.3"
serde = { version = "1.0", default-features = false }
serde-json = { package = "serde_json", version = "1.0", default-features = false }
spin = { version = "0.12", default-features = false, features = ["spin_mutex"] }
syn = "2.0"
talc = "5.0"
tempfile = "3.27"
thiserror = { version = "2.0", default-features = false }
tokio = "1.52"
tokio-stream = "0.1"
toml_edit = "0.25"
trybuild = "1"
wasmparser = "0.244"
wasm-encoder = "0.244"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
