[package]
name = "benchmarks"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "bench-analyzer"
path = "src/bin/bench_analyzer.rs"

[dependencies]
anyhow.workspace = true
clap = { version = "4.5", features = ["derive"] }
serde = { workspace = true, features = ["derive"] }
serde-json.workspace = true
fs2.workspace = true
sails-rs.workspace = true
itertools.workspace = true

[build-dependencies]
sails-rs = { workspace = true, features = ["build"] }
alloc-stress = { path = "alloc-stress" }
compute-stress = { path = "compute-stress" }
counter-bench = { path = "counter-bench" }
convert_case.workspace = true

[dev-dependencies]
gtest.workspace = true
sails-rs = { workspace = true, features = ["gtest"] }
alloc-stress = { path = "alloc-stress" }
compute-stress = { path = "compute-stress" }
counter-bench = { path = "counter-bench" }
ping-pong-bench-app = { path = "ping-pong/app" }
redirect-app = { path = "../examples/redirect/app" }
redirect-client = { path = "../examples/redirect/client" }
redirect-proxy = { path = "../examples/redirect/proxy" }
redirect-proxy-client = { path = "../examples/redirect/proxy-client" }
tokio = { workspace = true, features = ["rt", "macros"] }
tempfile.workspace = true
