[package]
name = "benchmarks"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[features]
default = []
gas-profile = ["gtest/gas-profile", "vft-stress/wasm-profile"]

[[bin]]
name = "bench-analyzer"
path = "src/bin/bench_analyzer.rs"

[dependencies]
anyhow.workspace = true
clap = { workspace = true, features = ["derive"] }
serde = { workspace = true, features = ["derive"] }
serde-json = { workspace = true, features = ["std"] }
fs2.workspace = true
sails-rs.workspace = true
itertools.workspace = true

[build-dependencies]
sails-rs = { workspace = true, features = ["build"] }
sails-idl-gen = { workspace = true, features = ["std"] }
alloc-stress = { path = "alloc-stress" }
compute-stress = { path = "compute-stress" }
counter-bench = { path = "counter-bench" }
noop-sails = { path = "noop-sails" }
minimal-vft-sails = { path = "minimal-vft-sails" }
storage-stress = { path = "storage-stress" }
vft-stress = { path = "vft-stress" }
storage-million = { path = "storage-million" }
convert_case.workspace = true
sails-client-gen-v2.workspace = true

[dev-dependencies]
gtest.workspace = true
sails-rs = { workspace = true, features = ["gtest"] }
aggregator-app = { path = "../examples/aggregator/app" }
aggregator-client = { path = "../examples/aggregator/client" }
alloc-stress = { path = "alloc-stress" }
compute-stress = { path = "compute-stress" }
counter-bench = { path = "counter-bench" }
noop-gstd = { path = "noop-gstd" }
noop-sails = { path = "noop-sails" }
noop-sails-hot = { path = "noop-sails-hot" }
noop-wat = { path = "noop-wat" }
minimal-vft-sails = { path = "minimal-vft-sails" }
minimal-vft-hot = { path = "minimal-vft-hot" }
demo-client = { path = "../examples/demo/client" }
storage-stress = { path = "storage-stress" }
vft-stress = { path = "vft-stress" }
storage-million = { path = "storage-million" }
ping-pong-bench-app = { path = "ping-pong/app" }
ping-pong-stack = { path = "../examples/ping-pong-stack" }
redirect-app = { path = "../examples/redirect/app" }
redirect-client = { path = "../examples/redirect/client" }
redirect-proxy = { path = "../examples/redirect/proxy" }
redirect-proxy-client = { path = "../examples/redirect/proxy-client" }
tokio = { workspace = true, features = ["rt", "macros"] }
tempfile.workspace = true
wasmparser.workspace = true
