[package]
name = "benchmarks"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "bench-analyzer"
path = "src/bin/bench_analyzer.rs"

[dependencies]
anyhow.workspace = true
clap = { workspace = true, features = ["derive"] }
serde = { workspace = true, features = ["derive"] }
serde-json = { workspace = true, features = ["std"] }
fs2.workspace = true
sails.workspace = true
itertools.workspace = true

[build-dependencies]
sails = { workspace = true, features = ["build"] }
alloc-stress = { path = "alloc-stress" }
compute-stress = { path = "compute-stress" }
counter-bench = { path = "counter-bench" }
convert_case.workspace = true
sails-client-gen-v2.workspace = true
noop-baseline = { path = "noop-baseline" }

[dev-dependencies]
gtest.workspace = true
sails = { workspace = true, features = ["gtest"] }
alloc-stress = { path = "alloc-stress" }
compute-stress = { path = "compute-stress" }
counter-bench = { path = "counter-bench" }
ping-pong-bench-app = { path = "ping-pong/app" }
ping-pong-stack = { path = "../examples/ping-pong-stack" }
redirect-app = { path = "../examples/redirect/app" }
redirect-client = { path = "../examples/redirect/client" }
redirect-proxy = { path = "../examples/redirect/proxy" }
redirect-proxy-client = { path = "../examples/redirect/proxy-client" }
noop-baseline-client = { path = "noop-baseline/client" }
tokio = { workspace = true, features = ["rt", "macros"] }
tempfile.workspace = true
