[package]
name = "sails-builder"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sails-idl-gen.workspace = true
sails-rtl.workspace = true
gwasm-builder.workspace = true
