[package]
name = "sails-client-gen"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
convert-case.workspace = true
genco.workspace = true
parity-scale-codec.workspace = true
sails-idl-parser.workspace = true

[dev-dependencies]
insta.workspace = true
