[package]
name = "sails-idlgen"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
convert-case.workspace = true
handlebars.workspace = true
sails-service.workspace = true
scale-info = { workspace = true, features = ["serde"] }
serde.workspace = true
serde-json.workspace = true
thiserror.workspace = true

[dev-dependencies]
parity-scale-codec = { workspace = true, features = ["derive"] }
scale-info = { workspace = true, features = ["derive"] }
