[package]
name = "sails-macros"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

[lib]
proc-macro = true

[dependencies]
sails-macros-core = { path = "./core" }
proc-macro-error.workspace = true

[dev-dependencies]
parity-scale-codec = { workspace = true, features = ["derive"] }
sails-rtl.workspace = true
scale-info = { workspace = true, features = ["derive"] }
tokio = { workspace = true, features = ["full"] }
trybuild.workspace = true
