[package]
name = "sails-rtl"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
gstd.workspace = true
hashbrown.workspace = true
hex.workspace = true
parity-scale-codec = { workspace = true, features = ["derive"] }
scale-info = { workspace = true, features = ["derive"] }
