[package]
name = "sails-rtl"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
futures.workspace = true
gear-core-errors.workspace = true
gprimitives.workspace = true
gstd.workspace = true
hashbrown.workspace = true
hex.workspace = true
parity-scale-codec = { workspace = true, features = ["derive"] }
primitive-types.workspace = true
sails-macros.workspace = true
scale-info = { workspace = true, features = ["derive"] }
spin.workspace = true
thiserror-no-std.workspace = true

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
gtest.workspace = true
