[package]
name = "alloc-stress"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
sails-rs.workspace = true

[build-dependencies]
sails-rs = { workspace = true, features = ["wasm-builder"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
sails-rs = { workspace = true, features = ["std"] }
