[package]
name = "alloc-stress"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
sails-rs = { workspace = true, features = ["runtime-canonical"] }
anyhow = { workspace = true, optional = true }
sails-build = { workspace = true, optional = true }

[build-dependencies]
sails-rs = { workspace = true, features = ["wasm-builder"] }
sails-build.workspace = true

[features]
default = ["runtime-canonical", "sails-canonical", "wasm-builder"]
sails-canonical = []
runtime-canonical = []
wasm-builder = []
sails-meta-dump = ["runtime-canonical", "sails-canonical", "dep:anyhow", "dep:sails-build"]

[[bin]]
name = "sails_meta_dump"
path = "src/bin/sails_meta_dump.rs"
required-features = ["sails-meta-dump"]
