[package]
name = "noop-gstd"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
gstd = { version = "=1.10.0", default-features = false, features = ["panic-handler"] }

[build-dependencies]
gwasm-builder.workspace = true
