[package]
name = "noop-sails-hot"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
gcore = { version = "=1.10.0", default-features = false }
gstd = { version = "=1.10.0", default-features = false, features = ["panic-handler"] }

[build-dependencies]
sails-rs = { workspace = true, features = ["wasm-builder"] }
