[package]
name = "storage-million"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
sails-rs.workspace = true
sails-storage = { workspace = true, features = ["experimental-vft-account"] }

[build-dependencies]
sails-rs = { workspace = true, features = ["wasm-builder", "experimental-vft-account"] }
