[package]
name = "storage-stress"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
sails-rs.workspace = true
sails-storage = { workspace = true, features = ["gear"] }

[build-dependencies]
sails-rs = { workspace = true, features = ["wasm-builder"] }
