[package]
name = "vft-stress"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[features]
default = []
wasm-profile = []

[dependencies]
sails-rs.workspace = true
sails-storage.workspace = true

[build-dependencies]
sails-rs = { workspace = true, features = ["wasm-builder"] }
