[package]
name = "async-plain-gen"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
sails-rs.workspace = true
# gstd.workspace = true

[build-dependencies]
sails-rs = { workspace = true, features = ["wasm-builder"] }

[dev-dependencies]
sails-rs = { workspace = true, features = ["gtest"] }
tokio = { workspace = true, features = ["rt", "macros"] }
gtest.workspace = true
async-plain-gen-client = { path = "../async-plain-gen-client" }
