[package]
name = "canonical-service"
version = "0.1.0"
edition.workspace = true

[dependencies]
sails-rs = { workspace = true, features = ["std", "runtime-canonical"] }
anyhow = { workspace = true, optional = true }
sails-build = { workspace = true, optional = true }

[build-dependencies]
sails-build.workspace = true
sails-rs = { workspace = true, features = ["wasm-builder"] }

[features]
default = ["runtime-canonical", "sails-canonical"]
sails-canonical = []
runtime-canonical = []
sails-meta-dump = ["runtime-canonical", "sails-canonical", "dep:anyhow", "dep:sails-build"]

[[bin]]
name = "sails_meta_dump"
path = "src/bin/sails_meta_dump.rs"
required-features = ["sails-meta-dump"]
