[package]
name = "classic-client"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
sails-rs.workspace = true

[build-dependencies]
classic = { path = "../classic" }
sails-client-gen.workspace = true
sails-idl-gen.workspace = true
