[package]
name = "conditional-service"
version = "0.1.0"
edition = "2021"

[dependencies]
gstd.workspace = true
sails-rtl.workspace = true
sails-macros.workspace = true
scale-info.workspace = true
parity-scale-codec.workspace = true

[build-dependencies]
gwasm-builder.workspace = true
sails-idl-gen.workspace = true
