[package]
name = "ping-pong-stack"
version = "0.1.0"
edition = "2024"

[dependencies]
sails-rs.workspace = true

[build-dependencies]
sails-rs = { workspace = true, features = ["build"] }

[dev-dependencies]
sails-rs = { workspace = true, features = ["gtest", "debug"] }
tokio = { workspace = true, features = ["rt", "macros"] }
