[package]
name = "ping-pong-stack"
version = "0.1.0"
edition = "2024"

[dependencies]
sails.workspace = true

[build-dependencies]
sails = { workspace = true, features = ["build"] }

[dev-dependencies]
sails = { workspace = true, features = ["gtest", "debug"] }
tokio = { workspace = true, features = ["rt", "macros"] }
